# baalued

./: Makefile.am  NEWS  README.md  TODO  config.c  configure.ac  do_all_in_one_step.sh  makefile
Documentation/: Makefile.am  baalued_overview.odp  howto_baalued.txt
etc/: Makefile.am  baalued.conf  baalued_control.conf  baalued_master.conf  baalued_node.conf
etc/baalued/: run
etc/baalued/log/: run
lib/: Makefile.am  config.c  libservice.h
man/: baalued.1
po/: POTFILES.in  de.po
src/: Makefile.am  main.c
